--- a/founder-deepdive/Readme
+++ b/founder-deepdive/Readme
@@ -5,5 +5,7 @@ First try on extractors:
 - run setup_database.sh to create the db
 - run run.sh to create the extractors and extract the people and companies from the text
 
+The file run contains all the "export" commands so should work without running them again before.
+
 This Sunday, I will finish the extractors part to extract the couples (people, companies), create the training set and define 
-the features to be learnt by deepdive
+the features to be learnt by deepdive.
